--- a/dummy_django_blog/blog/templates/blog/about.html
+++ b/dummy_django_blog/blog/templates/blog/about.html
@@ -8,7 +8,7 @@
   {% md_icon "information-slab-box-outline" size="1.5rem" %}
   <h2>A PROPOS</h2>
   <p>Révisions, apprentissages autour de Django.</p>
-  <div class="login_options mt-2 mb-5 d-flex flex-column justify-content-around align-items-center">
+  <div class="mt-2 mb-5 d-flex flex-column justify-content-around align-items-center">
     <a class="btn btn-primary mt-3" href="{% url 'feed' %}">RETOUR ACCUEIL</a>
   </div>
 </div>
