--- a/dummy_django_blog/authentication/templates/authentication/login.html
+++ b/dummy_django_blog/authentication/templates/authentication/login.html
@@ -25,7 +25,7 @@
           <button type="submit" class="btn btn-primary w-100">SE CONNECTER</button>
         </div>
       </form>
-      <div class="login_options mt-2 mb-5 d-flex flex-column justify-content-around align-items-center">
+      <div class="mt-2 mb-5 d-flex flex-column justify-content-around align-items-center">
         <a class="btn btn-primary mt-3" href="{% url 'password_reset' %}">MOT DE PASSE OUBLIE ?</a>
         <a class="btn btn-primary mt-3" href="{% url 'signin' %}">PAS ENCORE MEMBRE ?</a>
         <a class="btn btn-primary mt-3" href="{% url 'home' %}">RETOUR ACCUEIL</a>
