--- a/dummy_django_blog/blog/templates/blog/photos_add_multiple.html
+++ b/dummy_django_blog/blog/templates/blog/photos_add_multiple.html
@@ -22,7 +22,7 @@
       <button type="submit" class="btn btn-primary">TELEVERSER</button>
     </div>
   </form>
-  <div class="login_options mt-2 mb-5 d-flex flex-column justify-content-around align-items-center">
+  <div class="mt-2 mb-5 d-flex flex-column justify-content-around align-items-center">
     <a class="btn btn-primary mt-3" href="{% url 'feed' %}">RETOUR ACCUEIL</a>
   </div>
 </div>
