--- a/dummy_django_blog/blog/templates/blog/photos_delete.html
+++ b/dummy_django_blog/blog/templates/blog/photos_delete.html
@@ -5,15 +5,15 @@
 
 {% block content %}
 <div class="container d-flex flex-column align-items-center justify-content-center">
-  {% md_icon "delete-outline" size="1.5rem" %}
-  <h2>CONFIRMER SUPPRESSION PHOTO: {{ photo.title }}</h2>
-  <form class="form" action="" method="post">
-    {% csrf_token %}
-    <button type="submit" class="btn btn-primary">CONFIRMER SUPPRESSION</button>
-  </form>
-  <img style="width:25%;" src="{{ photo.image.url }}" alt="a dummy photo">
-  <div class="login_options mt-2 mb-5 d-flex flex-column justify-content-around align-items-center">
-    <a class="btn btn-primary mt-3" href="{% url 'feed' %}">RETOUR ACCUEIL</a>
-  </div>
+    {% md_icon "delete-outline" size="1.5rem" %}
+    <h2>CONFIRMER SUPPRESSION PHOTO: {{ photo.title }}</h2>
+    <form class="form" action="" method="post">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-primary">CONFIRMER SUPPRESSION</button>
+    </form>
+    <img style="width:25%;" src="{{ photo.image.url }}" alt="a dummy photo">
+    <div class="mt-2 mb-5 d-flex flex-column justify-content-around align-items-center">
+        <a class="btn btn-primary mt-3" href="{% url 'feed' %}">RETOUR ACCUEIL</a>
+    </div>
 </div>
 {% endblock content %}
