--- a/dummy_django_blog/blog/templates/blog/posts_add.html
+++ b/dummy_django_blog/blog/templates/blog/posts_add.html
@@ -5,30 +5,30 @@
 
 {% block content %}
 <div class="container d-flex flex-column align-items-center justify-content-center">
-  {% md_icon "publish" size="1.5rem" %}
-  <h2>AJOUTER UN BILLET.</h2>
-  <form class="form d-flex flex-column w-100" action="" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <h3>INFOS BILLET</h3>
-    <label for="title">{{ post_form.title.label }}</label>
-    <input type="text" id="title" name="title" required>
-    <label for="content">{{ post_form.content.label }}</label>
-    <textarea  type="text" id="content" name="content" rows="8"></textarea>
-    <input type="hidden" name="edit_post" value="True" required>
-    <hr>
-    <h3>INFOS PHOTO</h3>
-    <label for="title_photo">{{ photo_form.title_photo.label }}</label>
-    <input type="text" id="title_photo" name="title_photo" required>
-    <label for="caption">{{ photo_form.caption.label }}</label>
-    <textarea  type="text" id="caption" name="caption" rows="2" required></textarea>
-    <input type="hidden" name="edit_photo" value="True">
-    <input class="pt-3" type="file" name="image" accept="image/*" id="id_image" required>
-    <div class="pt-3 button_container d-flex justify-content-start">
-      <button type="submit" class="btn btn-primary">PUBLIER</button>
+    {% md_icon "publish" size="1.5rem" %}
+    <h2>AJOUTER UN BILLET.</h2>
+    <form class="form d-flex flex-column w-100" action="" method="post" enctype="multipart/form-data">
+      {% csrf_token %}
+      <h3>INFOS BILLET</h3>
+      <label for="title">{{ post_form.title.label }}</label>
+      <input type="text" id="title" name="title" required>
+      <label for="content">{{ post_form.content.label }}</label>
+      <textarea  type="text" id="content" name="content" rows="8"></textarea>
+      <input type="hidden" name="edit_post" value="True" required>
+      <hr>
+      <h3>INFOS PHOTO</h3>
+      <label for="title_photo">{{ photo_form.title_photo.label }}</label>
+      <input type="text" id="title_photo" name="title_photo" required>
+      <label for="caption">{{ photo_form.caption.label }}</label>
+      <textarea  type="text" id="caption" name="caption" rows="2" required></textarea>
+      <input type="hidden" name="edit_photo" value="True">
+      <input class="pt-3" type="file" name="image" accept="image/*" id="id_image" required>
+      <div class="pt-3 button_container d-flex justify-content-start">
+        <button type="submit" class="btn btn-primary">PUBLIER</button>
+      </div>
+    </form>
+    <div class="mt-2 mb-5 d-flex flex-column justify-content-around align-items-center">
+        <a class="btn btn-primary mt-3" href="{% url 'feed' %}">RETOUR ACCUEIL</a>
     </div>
-  </form>
-  <div class="login_options mt-2 mb-5 d-flex flex-column justify-content-around align-items-center">
-    <a class="btn btn-primary mt-3" href="{% url 'feed' %}">RETOUR ACCUEIL</a>
-  </div>
 </div>
 {% endblock content %}
