--- a/dummy_django_blog/blog/templates/blog/posts_detail.html
+++ b/dummy_django_blog/blog/templates/blog/posts_detail.html
@@ -4,10 +4,10 @@
 {% block title %}POST PAGE{% endblock title %}
 
 {% block content %}
-<div class="container">
-    <div class="w-100 d-flex flex-row justify-content-center">
-      {% md_icon "details" size="1.5rem" %}
-      <h2>BILLET</h2>
+<div class="container d-flex flex-column">
+    <div class="w-100 d-flex flex-column align-items-center">
+        {% md_icon "details" size="1.5rem" %}
+        <h2>BILLET</h2>
     </div>
     <div class="d-flex flex-column align-items-start justify-content-center">
         <p>TITLE: {{ post.title }}</p>
@@ -16,12 +16,14 @@
     </div>
     <div class="d-flex flex-column">
         <img src="{{ post.image.image.url }}" alt="a dummy photo">
-        <div class="login_options mt-2 mb-5 d-flex flex-row justify-content-around align-items-center">
-            <a class="btn btn-primary mt-3" href="{% url 'feed' %}">RETOUR ACCUEIL</a>
+        <div class="mt-2 mb-5 d-flex flex-row justify-content-around align-items-center">
             {% if request.user in post.contributors.all %}
-              <a class="btn btn-primary m-3" href="{% url 'posts_update' post.id %}">MODIFIER BILLET</a>
-              <a class="btn btn-primary" href="{% url 'posts_delete' post.id %}">SUPPRIMER BILLET</a>
-          {% endif %}
+                <div class="options_container d-flex flex-row align-items-baseline">
+                    <a class="btn btn-primary m-3" href="{% url 'posts_update' post.id %}">MODIFIER BILLET</a>
+                    <a class="btn btn-primary" href="{% url 'posts_delete' post.id %}">SUPPRIMER BILLET</a>
+                </div>
+            {% endif %}
+            <a class="btn btn-primary mt-3" href="{% url 'feed' %}">RETOUR ACCUEIL</a>
         </div>
     </div>
 </div>
