--- a/dummy_django_blog/blog/templates/blog/posts_update.html
+++ b/dummy_django_blog/blog/templates/blog/posts_update.html
@@ -5,23 +5,23 @@
 
 {% block content %}
 <div class="container d-flex flex-column align-items-center justify-content-center">
-  {% md_icon "swap-horizontal" size="1.5rem" %}
-  <h2>METTRE A JOUR BILLET</h2>
-  <form class="form" action="" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ edit_post_form.as_p }}
-    {{ edit_photo_form.as_p }}
-    <div class="button_container d-flex justify-content-start">
-      <button type="submit" class="btn btn-primary">METTRE A JOUR</button>
+    {% md_icon "swap-horizontal" size="1.5rem" %}
+    <h2>METTRE A JOUR BILLET</h2>
+    <form class="form" action="" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ edit_post_form.as_p }}
+        {{ edit_photo_form.as_p }}
+        <div class="button_container d-flex justify-content-start">
+            <button type="submit" class="btn btn-primary">METTRE A JOUR</button>
+        </div>
+    </form>
+    <form class="form" action="" method="post">
+        {% csrf_token %}
+        {{ delete_form.as_p }}
+        <button type="submit" class="btn btn-primary">SUPPRIMER BILLET</button>
+    </form>
+    <div class="mt-2 mb-5 d-flex flex-column justify-content-around align-items-center">
+        <a class="btn btn-primary mt-3" href="{% url 'feed' %}">RETOUR ACCUEIL</a>
     </div>
-  </form>
-  <form class="form" action="" method="post">
-    {% csrf_token %}
-    {{ delete_form.as_p }}
-    <button type="submit" class="btn btn-primary">SUPPRIMER BILLET</button>
-  </form>
-  <div class="login_options mt-2 mb-5 d-flex flex-column justify-content-around align-items-center">
-    <a class="btn btn-primary mt-3" href="{% url 'feed' %}">RETOUR ACCUEIL</a>
-  </div>
 </div>
 {% endblock content %}
