--- a/dummy_django_blog/blog/templates/blog/posts_view.html
+++ b/dummy_django_blog/blog/templates/blog/posts_view.html
@@ -6,28 +6,32 @@
 
 {% block content %}
 <div class="container d-flex flex-column">
-    <div class="w-100 d-flex flex-row justify-content-center">
-      {% md_icon "details" size="1.5rem" %}
-      <h2>BILLETS</h2>
+    <div class="w-100 d-flex flex-column align-items-center">
+        {% md_icon "details" size="1.5rem" %}
+        <h2>BILLETS</h2>
     </div>
     <div class="d-flex flex-column align-items-start justify-content-around">
         {% if page_obj|length > 0 %}
-          {% for post in page_obj %}
-            <p>Titre: {{ post.title }}</p>
-            <p>Auteurs: {{ post.contributors.all|join:", " }}</p>
-            <p>Publié le: {{ post.created_at }}</p>
-            <p>Description: {{ post.content }}</p>
-            <figure>
-              <img src="{{ post.image.image.url }}" alt="a dummy photo">
-              <figcaption>{{ post.image.caption }}</figcaption>
-            </figure>
-            <div class="options_container d-flex flex-row">
-              <a class="btn btn-primary m-3" href="{% url 'posts_update' post.id %}">MODIFIER BILLET</a>
-              <a class="btn btn-primary m-3" href="{% url 'posts_delete' post.id %}">SUPPRIMER BILLET</a>
-            </div>
-          {% endfor %}
+            {% for post in page_obj %}
+                <p>Titre: {{ post.title }}</p>
+                <p>Auteurs: {{ post.contributors.all|join:", " }}</p>
+                <p>Publié le: {{ post.created_at }}</p>
+                <p>Description: {{ post.content }}</p>
+                <figure>
+                    <img src="{{ post.image.image.url }}" alt="episode photo">
+                    <figcaption>{{ post.image.caption }}</figcaption>
+                </figure>
+                <div class="mt-2 mb-5 d-flex flex-row justify-content-around align-items-center">
+                    {% if request.user in post.contributors.all %}
+                        <div class="options_container d-flex flex-row align-items-baseline">
+                            <a class="btn btn-primary m-3" href="{% url 'posts_update' post.id %}">MODIFIER BILLET</a>
+                            <a class="btn btn-primary" href="{% url 'posts_delete' post.id %}">SUPPRIMER BILLET</a>
+                        </div>
+                    {% endif %}
+                </div>
+            {% endfor %}
         {% else %}
-          <a class="btn btn-primary" href="{% url 'posts_add' %}">PAS DE BILLETS, SOYEZ NOTRE HEROS, AJOUTEZ EN UN !</a>
+            <a class="btn btn-primary" href="{% url 'posts_add' %}">PAS DE BILLETS, SOYEZ NOTRE HERO, AJOUTEZ EN UN !</a>
         {% endif %}
     </div>
     <div class="d-flex">
