--- a/dummy_django_blog/templates/base.html
+++ b/dummy_django_blog/templates/base.html
@@ -33,12 +33,12 @@
             <div class="w-100 container-fluid">
                 {% if user.is_authenticated %}
                     <a class="navbar-brand" href="{% url 'feed' %}">
-                        <img src="{% static 'vendors/img/les_petits_meurtres_saison_2.png' %}" alt="LesTitsMeutres brand logo" width="50" height="50">
+                        <img src="{% static 'vendors/img/les_petits_meurtres_saison_2.png' %}" alt="LesTitsMeutres brand logo" width="60" height="60">
                         LesPetitsMeutres
                     </a>
                 {% else %}
                     <a class="navbar-brand" href="{% url 'home' %}">
-                        <img src="{% static 'vendors/img/les_petits_meurtres_saison_2.png' %}" alt="LesTitsMeutres brand logo" width="50" height="50">
+                        <img src="{% static 'vendors/img/les_petits_meurtres_saison_2.png' %}" alt="LesTitsMeutres brand logo" width="60" height="60">
                         LesPetitsMeutres
                     </a>
                 {% endif %}
@@ -120,7 +120,7 @@
         </section>
     </main>
     <footer class="d-flex justify-content-center w-100">
-      <div class="footer-container">
+      <div class="d-flex flex-column justify-content-center">
         <p id="footer_date"></p>
       </div>
     </footer>
