--- a/dummy_django_blog/blog/templates/blog/partials/photo_snippet.html
+++ b/dummy_django_blog/blog/templates/blog/partials/photo_snippet.html
@@ -1,15 +1,18 @@
 {% load blog_tags %}
 
-
-<div class="d-block card-carousel d-flex flex-column">
-    <h3>Photo</h3>
-    <figure>
-        <img class="photo_miniature class-img-top" src="{{ photo.image.url }}" alt="a photo">
-        <figcaption><i>{{ photo.caption }}</i></figcaption>
-    </figure>
-    <div class="card-body">
-        <p class="card-title">{{ photo.title_photo }}</p>
-        <p class="card-text">Proposée par {% get_poster photo.uploader %}</p>
-        <p class="card-text">{{ photo.created_at|format_created_date }}</p>
-      </div>
-</div>
+<section>
+    <div class="d-flex flex-column" id="{{ photo.id }}">
+        <h3><a href="#{{ photo.id }}">Photo</a></h3>
+        <div class="d-flex flex-row">
+            <figure>
+                <img class="photo_miniature class-img-top" src="{{ photo.image.url }}" alt="a photo">
+                <figcaption><i>{{ photo.caption }}</i></figcaption>
+            </figure>
+            <div class="">
+                <p class="">{{ photo.title_photo }}</p>
+                <p class="">Proposée par {% get_poster photo.uploader %}</p>
+                <p class="">{{ photo.created_at|format_created_date }}</p>
+            </div>
+        </div>
+    </div>
+</section>
