--- a/dummy_django_blog/static/assets/css/styles.css
+++ b/dummy_django_blog/static/assets/css/styles.css
@@ -188,23 +188,37 @@ body .dropdown-item {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: "ArsenalSC", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    color: white;
+  font-family: "ArsenalSC", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: white;
+}
+
+section {
+  border-bottom: 1px dashed pink;
+}
+
+.login-container .btn {
+  width: 100%;
+  background-color: #00000042;
+  border: 1px solid pink;
 }
 
 .feed-container {
   display: flex;
-  flex-direction: row;
-  border: 1px dashed pink;
+  flex-direction: column;
   border-radius: 3%;
-  margin-top: 2%;
-  padding: 2% 1%;
+  margin: 2% 0% 5% 0%;
+  padding: 2% 0%;
+  width: 100%;
+}
+
+.feed-item {
+  background-color: #00000054;
 }
 
 .feed-intro {
-  padding: 5%;
+  padding: 5% 10%;
   font-size: 1.5rem;
   font-family: "Caveat-large", cursive;
   font-optical-sizing: auto;
@@ -219,34 +233,12 @@ h1, h2, h3, h4, h5, h6 {
   font-style: normal;
 }
 
-.card-carousel {
-  margin: 0 20% 0 20%;
-  padding: 0 5%;
-  width: 450px;
-  background: linear-gradient( rgb(0, 0, 0, 0.36), rgba(61, 131, 127, 0.56) );
-}
-
-.carousel-control-prev {
-  right: -5%;
-}
-
-.carousel-control-next {
-  right: -5%;
-}
-
-.card {
-  margin: 0;
-  padding: 0;
-  width: 250px;
-  background: linear-gradient( rgb(0, 0, 0, 0.36), rgba(61, 131, 127, 0.56) );
-}
-
-.card-title {
-  margin-bottom: 0;
+.feed-smileys {
+  font-size: 1.5rem;
 }
 
 .photo_miniature {
-  width: 15%;
+  width: 100%%;
   height: auto;
   border-radius:
 }
@@ -316,17 +308,8 @@ footer {
   .feed-container {
     display: flex;
     flex-direction: column;
-    border: 1px dashed pink;
     border-radius: 3%;
     margin-bottom: 10%
-  }
-
-  .carousel-control-prev {
-    left: -5%;
-  }
-
-  .carousel-control-next {
-    right: -5%;
   }
 
   .photos-container {
