--- a/dummy_django_blog/templates/base.html
+++ b/dummy_django_blog/templates/base.html
@@ -29,7 +29,7 @@
         {% endif %}
     </div>
     <header>
-        <nav class="navbar navbar-light navbar-light sticky-top navbar-custom">
+        <nav class="navbar navbar-light navbar-light sticky-top navbar-custom fixed*top">
             <div class="w-100 container-fluid">
                 {% if user.is_authenticated %}
                     <a class="navbar-brand" href="{% url 'feed' %}">
@@ -50,7 +50,7 @@
                       <div id="navbar-nav" class="navbar-nav ml-auto">
                           {% if user.is_authenticated %}
                               <div class="nav-link">
-                                      <a class="nav-item" href="{% url 'feed' %}">home</a>
+                                  <a class="nav-item" href="{% url 'feed' %}">home</a>
                               </div>
                               <div class="nav-link dropdown custom-dropdown">
                                   <a class="navbar-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -115,9 +115,7 @@
         </nav>
     </header>
     <main>
-        <section>
-            {% block content %}{% endblock content %}
-        </section>
+        {% block content %}{% endblock content %}
     </main>
     <footer class="d-flex justify-content-center w-100">
       <div class="d-flex flex-column justify-content-center">
